[package]
name = "gelflb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.28" }
serde_json = "1.0.113"
serde = {version="*", features = ["derive"]}
socket2 = "0.5.5"
etherparse = "0.13.0"
libc = { version = "0.2.153", features = ["extra_traits"] }
os_info = "3.7.0"
toml = "0.8.9"
log = "0.4.20"
chrono = "0.4.33"
env_logger = "0.11.1"
anyhow = "1.0.79"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4" }
utoipa-swagger-ui = {version="6.0.0",features = ["axum"]}
utoipa = { version = "4.2.0", features = ["axum_extras"] }
serde_toml = "0.0.1"

[target.'cfg(windows)'.dependencies]
windows = {version="*",features = ["Win32_Networking_WinSock","Win32_Foundation"]}
